--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -6,11 +6,7 @@ on:
     branches:
       - master
   workflow_dispatch:
-    inputs:
-      build_all:
-        description: Build latest V Rising version
-        required: false
-        type: boolean
+    inputs: {}
   repository_dispatch: { }
 jobs:
   docker:
