--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -36,10 +36,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build go binary
+      - name: Build renfield
+        working-directory: renfield
         run: |
           go build
-      - name: Run binary
+      - name: Build image builder
+        run: |
+          go build
+      - name: Run image builder
         env:
           GITHUB_REGISTRY: ghcr.io/${{ github.repository }}
         run: |
